[profile.dev]
opt-level = "z"

[profile.release]
opt-level = "z"

[workspace]
members = ["dnas/*/zomes/coordinator/*", "dnas/*/zomes/integrity/*"]

[workspace.dependencies]
hdi = "=0.2.1"
hdk = "=0.1.1"
serde = "1"

[workspace.dependencies.questions]
path = "dnas/questions/zomes/coordinator/questions"

[workspace.dependencies.questions_integrity]
path = "dnas/questions/zomes/integrity/questions"
